Update Face and Eye Recognition.ipynb

--- a/Face and Eye Recognition.ipynb
+++ b/Face and Eye Recognition.ipynb
@@ -13,8 +13,8 @@
     "\n",
     "# We point OpenCV's CascadeClassifier function to where our \n",
     "# classifier (XML file format) is stored\n",
-    "face_classifier = cv2.CascadeClassifier('Haarcascades/haarcascade_frontalface_default.xml')\n",
-    "eye_classifier = cv2.CascadeClassifier('Haarcascades/haarcascade_eye.xml')\n",
+    "face_classifier = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
+    "eye_classifier = cv2.CascadeClassifier('haarcascade_eye.xml')\n",
     "\n",
     "#loading the image \n",
     "img = cv2.imread('images/Trump.jpg')\n",
@@ -52,8 +52,8 @@
     "import numpy as np\n",
     "\n",
     "def face_detector(img,size = 0.5):\n",
-    "    face_classifier = cv2.CascadeClassifier('Haarcascades/haarcascade_frontalface_default.xml')\n",
-    "    eye_classifier = cv2.CascadeClassifier('Haarcascades/haarcascade_eye.xml')\n",
+    "    face_classifier = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
+    "    eye_classifier = cv2.CascadeClassifier('haarcascade_eye.xml')\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    faces = face_classifier.detectMultiScale(gray, 1.3, 5)\n",
     "    if faces is ():\n",
