--- a/People detection.ipynb
+++ b/People detection.ipynb
@@ -9,7 +9,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "full_body = cv2.CascadeClassifier('Haarcascades\\haarcascade_fullbody.xml')\n",
+    "full_body = cv2.CascadeClassifier('haarcascade_fullbody.xml')\n",
     "cap = cv2.VideoCapture('images/walking.avi')\n",
     "\n",
     "while cap.isOpened():\n",
